# ifrs-expert

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  EXPERIMENTS.md  LEARNINGS.md  METHODOLOGY.md  Makefile  PLAN.md  README.md  old_corpus  package-lock.json  package.json  promptfooconfig.yaml  pyproject.toml  run_stability_scoring.py  streamlit_app.py
chrome_extension/ifrs-expert-import/: README.md  background_common.mjs  ifrs_background.mjs  ifrs_document_types.mjs  ifrs_import.mjs  ifrs_import.test.mjs  manifest.json  navis_background.mjs  progress_state.mjs  progress_state.test.mjs  service_worker.js  sidepanel.css  sidepanel.html  sidepanel.js
config/: en-fr-glossary--experiment57-target-recall.yaml  en-fr-glossary.yaml  en-fr-glossary_all.yaml  en-fr-glossary_issues.yaml  policy.default.yaml
data/: LEARNINGS.md
docs/: ARCHITECTURE.md  ENGINEERING_NOTES.md  JOURNAL.md  METHODOLOGY.md  PLAN.md  PROMPTFOO.md  README.md  testing_policy.md
docs/sme-reviews/: 2024041-SME-REVIEW.md  20260412-SME-REVIEW--alternative-outputs-proposals.md  20260412-SME-REVIEW.md  20260413-SME-REVIEW.md  20260501-SME-REVIEW.md  20260503-SME-REVIEW.md
examples/: iasb ifrs example-chunks.json  ifrs-16-leases_38-39.json  ifrs-9-appendix-issue__CHUNKS.json  www.ifrs.org__issued-standards__list-of-standards__ifrs-9-financial-instruments.html__content__dam__ifrs__publications__html-standards__english__2026__issued__ifrs9.json  www.ifrs.org__issued-standards__list-of-standards__ifrs-9-financial-instruments.html__content__dam__ifrs__publications__html-standards__english__2026__issued__ifrs9__CHUNKS.json  www.ifrs.org__issued-standards__list-of-standards__ifrs-9-financial-instruments.html__content__dam__ifrs__publications__html-standards__english__2026__issued__ifrs9__SECTIONS.json
examples/IFRS/: 20260414T094554Z--ifrs-9-financial-instruments.html  20260414T094554Z--ifrs-9-financial-instruments.json  (+8 more)
experiments/: EXPERIMENTS.md  Q1.11.txt  Q1.13.txt  Q1.16.txt  Q1.17.txt  Q1.3.txt  Q1.5.txt  __init__.py  run_03_proper_context_hierarchical_retrieval.sh
plans/: 2026-03-30--add_streamlist.md  2026-04-04--html-import.md  2026-04-04--query-embedding-cache.md  2026-04-05--document-selection-stage-plan.md  2026-04-05-query-titles-plan.md  2026-04-06--openai-codex-oauth.md  2026-04-07--add-minimax-provider.md  2026-04-08--document-selection-stage-plan.md  2026-04-09--q1-retrieve-parameter-grid-search.md  2026-04-09--spurious-approaches-vs-sections-html-matrix.md  2026-04-13--navis-efl-ingestion-plan.md  2026-04-13--naxis-efl-ingestion-plan.md  2026-04-13b--navis-chapter-bundle-capture-plan.md  2026-04-13c--section-synthetic-id-plan.md  2026-04-14--ifrs-multi-document-types-and-annotations-plan.md  2026-04-14b--cli-default-alignment-plan.md  2026-04-15--authority-competition-plan.md  2026-04-18--issues-section-fix-and-document-index-repair.md  2026-04-18b--document-similarity-representation-per-doctype-plan.md  2026-04-22--documents2-through-chunks-routing-plan.md  2026-04-23--retrieval-policy-cleanup.md  2026-04-23b--q1-retrieval-only-non-regression-suite.md  2026-04-26--analysis-script-consolidation-review.md  2026-04-29--ifrs-refer-annotation-ingestion-plan.md  2026-04-29b--same-family-reference-expansion.md  2026-05-01--q2-target-range-and-provenance-display.md  2026-05-13--langgraph-case-agent-migration.md  2026-05-13--simplify-streamline-codebase-report.md  2026-05-13--simplify-streamline-codebase.md  2026-05-14--pydantic-ai-migration.md  2026-05-15--idiomatic-pydantic-ai-plan.md  2026-05-15--state-of-the-art-small-repo-plan.md  2026-05-16--remove-leftover-glue-state-of-the-art-pydantic-ai-langgraph.md
promptfoo_src/: base.answer.yaml  base.retrieve.yaml  base.yaml
prompts/: answer_prompt.txt  answer_prompt_A.txt  answer_prompt_B.json  answer_prompt_B.txt  glossary_expansion_prompt.txt
scripts/: backfill_document_similarity_indices.py  build_promptfoo_config.py  demo.sh  loc_report.py  report_simplification_loc.py  run_answer.py  run_promptfoo_eval.py  run_q1_toc_similarity.py  run_retrieval_eval_hook.py  run_retrieve.py  test_minimax.py
src/: __init__.py  answer_artifacts.py  applicability_markdown_utils.py  b_response_utils.py  cli.py  convert_b_response.py  interfaces.py  logging_config.py  policy.py  stability_scorer.py
tests/: __init__.py  fakes.py  policy.py
(+3831 files in other folders)
