[project]
name = "ifrs-expert"
version = "0.1.0"
description = "AI assistant for IFRS and related accounting guidance"
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.27.2",
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.2.0",
    "scrapling>=0.4.2",
    "curl-cffi>=0.14.0",
    "playwright>=1.58.0",
    "browserforge>=1.2.4",
    "msgspec>=0.20.0",
    "patchright>=1.58.2",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "playwright-stealth>=2.0.2",
]

[dependency-groups]
dev = [{include-group = "lint"}, {include-group = "test"}, {include-group = "audit"}]
lint = ["ruff", "ty"]
test = ["pytest", "pytest-cov"]
audit = ["pip-audit"]

[tool.ruff]
line-length = 240
target-version = "py311"
exclude = ["prototype/", "tests/", "experiments/"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["G004", "PLR0911", "PLR0912", "PLR0913", "PLR0915", "C901", "COM812", "D203", "D213", "D413", "S603"]

[tool.pytest]
addopts = ["--cov=src", "--cov-fail-under=80"]

[tool.coverage.run]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover"]

[tool.ty.terminal]
error-on-warning = true

[tool.ty.environment]
python-version = "3.11"

[tool.ty.rules]
possibly-unresolved-reference = "error"
unused-ignore-comment = "warn"

[tool.hatch.build.targets.wheel]
packages = ["src"]
