[project]
name = "ifrs-expert"
version = "0.1.0"
description = "AI assistant for IFRS and related accounting guidance"
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.27.2",
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.2.0",
    # LLM clients
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    "mistralai>=1.0.0",
    # Environment variable loading
    "python-dotenv>=1.0.0",
    # UI
    "streamlit>=1.43.0",
    "pyyaml>=6.0.3",
    "beautifulsoup4>=4.14.3",
    "pydantic>=2.12.5",
    "langgraph>=1.1.0",
]

[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "test"},
    {include-group = "audit"},
    "pre-commit>=4.5.1",
]
lint = ["ruff", "ty"]
test = ["pytest", "pytest-cov"]
audit = ["pip-audit"]

[tool.ruff]
line-length = 240
target-version = "py311"
exclude = ["prototype/", "tests/", "experiments/", "scripts/"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["G004", "COM812", "D203", "D213", "D413"]

[tool.pytest]
addopts = ["--cov=src", "--cov-fail-under=80"]

[tool.coverage.run]
omit = ["tests/*", "src/llm/*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover"]
omit = ["src/llm/*"]

[tool.ty.terminal]
error-on-warning = true

[tool.ty.environment]
python-version = "3.11"

[tool.ty.rules]
possibly-unresolved-reference = "error"
unused-ignore-comment = "warn"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
# Hopefully prevent supply chain attacks by delaying upgrades enough for them to be detected
exclude-newer = "10 days"
